--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.956.0",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
