--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "lint": "npx eslint ."
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.956.0",
