Try using npm install

--- a/.github/workflows/lint.js.yml
+++ b/.github/workflows/lint.js.yml
@@ -25,6 +25,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Run linting for backend code
-      run: cd backend && npm ci && npm run lint
+      run: cd backend && npm install && npm run lint
     - name: Run linting for frontend code
-      run: cd ../website && npm ci && npm run lint
+      run: cd ../website && npm install && npm run lint
