--- a/RAG/chunking/DockerFile
+++ b/RAG/chunking/DockerFile
@@ -1,12 +1,11 @@
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
 COPY . .
+
+RUN pip install fastapi uvicorn langchain langchain-community beautifulsoup4
 
 EXPOSE 8001
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["uvicorn", "document_loader_service:app", "--host", "0.0.0.0", "--port", "8001"]
