Added langchain-chrome to requirements.txt. Though it won't be used very soon, it allows for the container to run at the moment

--- a/RAG/requirements.txt
+++ b/RAG/requirements.txt
@@ -4,6 +4,7 @@ langchain-mongodb
 langchain-google-genai
 langchain-text-splitters
 langchain-huggingface 
+langchain-chroma
 text-generation 
 transformers 
 google-search-results 
