--- a/RAG/chunking/Dockerfile
+++ b/RAG/chunking/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /app
 
 COPY . .
 
-RUN pip install fastapi uvicorn langchain langchain-community beautifulsoup4
+RUN pip install fastapi uvicorn langchain langchain-community langchain-huggingface python-multipart sentence-transformers pypdf
 
 EXPOSE 8001
 
-CMD ["uvicorn", "document_loader_service:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["uvicorn", "chunker:app", "--host", "0.0.0.0", "--port", "8001"]
