--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/credential-providers": "^3.956.0",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
