Added .env to document_loader container Specified embeddings output of 768 to Gemini embeddings model Fixed retrieve_context tool ->  variable was created the wrong way Created local LangchainRuntimeContext on agents.py due to circular import if importing the class from main.py

--- a/RAG/document_loader/Dockerfile
+++ b/RAG/document_loader/Dockerfile
@@ -11,6 +11,7 @@ RUN pip install --no-cache-dir \
     pypdf \
     langchain-text-splitters \
     langchain-google-genai \
+    langchain-community \
     python-dotenv
 
 CMD ["uvicorn", "document_loader:app", "--host", "0.0.0.0", "--port", "8001"]
